Prevent slight horizontal site shift when y-scrollbar appears

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,10 +25,10 @@ body {
     flex-direction: column;
     place-items: center;
 
-    width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+    padding-left: calc(100vw - 100%); /* Prevent slight horizontal shift when y-scrollabr appears */
 }
 
 a {
